<resources>
    <string name="app_name">Crime Mapping</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="crime_map">Crime Map</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="terrian">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="about_app">About The App</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search Location…</string>
    <string name="title_activity_crime_mapping_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_selecione_crime">Select a Crime</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="layout_addcrime_desciption">Description</string>
    <string name="layout_addcrime_date">Approximate date it occurred:</string>
    <string name="layout_addcrime_time">Approximate time:</string>
    <string name="layout_addcrime_crimetype">Crime Type</string>
    <string name="email">EMAIL</string>
    <string name="username">YOUR NAME</string>
    <string name="password">PASSWORD</string>
    <string name="repassword">RE-ENTER PASSWORD</string>
    <string name="log_in">Log In</string>
    <string name="not_a_member_sign_up_here">Not a Member Yet?\u0020</string>
    <string name="signup_now"><u>SignUp Now</u></string>
    <string name="crime_list">Crime List</string>
    <string name="start_using_google">Continue with Google</string>
    <string name="or">----------------------OR----------------------</string>
    <string name="sign_up">Sign Up Now</string>
    <string name="login_heading">LOGIN to Crime Mapping</string>


    <string name="crime_assalt">Robbery</string>
    <string name="crime_assalt_desc">Taking property from a person by force, threat of force, or fear</string>
    <string name="crime_bank">Robbery at ATM</string>
    <string name="crime_bank_desc">Robbery after leaving bank ATM</string>
    <string name="crime_car">Motor Vehicle Theft</string>
    <string name="crime_car_desc">Theft of a car, truck, motorcycle, or any motor vehicle</string>
    <string name="crime_police">Police Station</string>
    <string name="crime_police_desc">Enter the location of police stations</string>
    <string name="crime_drugs">Drug Addicts</string>
    <string name="crime_drugs_desc">Frequented venue by drug addicts</string>
    <string name="crime_danplace">Dangerous place</string>
    <string name="crime_danplace_desc">Location of dangerous places (slums or neighborhoods)</string>
    <string name="crime_homicide">Homicide</string>
    <string name="crime_homicide_desc">Murder, homicide or assassination of persons</string>
    <string name="crime_robandkill">Robbery and killing</string>
    <string name="crime_robandkill_desc">Robbery-murder of someone</string>
    <string name="crime_garbage">Garbage</string>
    <string name="crime_garbage_desc">Illegal garbage disposal on streets</string>
    <string name="crime_moto">Bikers gang robbery</string>
    <string name="crime_moto_desc">Robbery by motorcycle, bicycle or similar</string>
    <string name="crime_hijack">Hijacking</string>
    <string name="crime_hijack_desc">Hijacking in banks or similar kind</string>
    <string name="crime_sex">Sexual violence</string>
    <string name="crime_sex_desc">Sexual crime against women</string>
    <string name="crime_loudsound">Loud Sound</string>
    <string name="crime_loudsound_desc">Places with loud prohibited during opening hours</string>
    <string name="crime_vandalism">Vandalism</string>
    <string name="crime_vandalism_desc">Willful, malicious destruction, damage, or defacement of property</string>
    <string name="crime_animal">Crime Against Animals</string>
    <string name="crime_animal_desc">Cruelty and maltreatment of animals</string>
    <string name="adddd">Add</string>
    <string name="crime_descriptionnn">Crime Description:</string>
    <string name="dateee">Crime date:</string>
    <string name="timeee">Crime time:</string>
    <string name="coordinatess">Coordinates:</string>
    <string name="info_title">About Crime Mapping…</string>
    <string name="info_message">Crime Mapping is an Android Application to generate real time Crime Maps.Users can select any coordinate from map and can post crime details online. \n\nAll rights reserved.We are not responsible for any damages incurred from using this application. This application and
        merely informative, updated by the users themselves.\nThe author is not responsible for the inaccuracy of the information entered.
        \n\nThis application is in continuous development.
    </string>
    <string name="info_title_aboutus">Developers:</string>
    <string name="info_message_aboutus">Himanshu Saini \nArya Gaurav \nLakshendra Singh\nAmay Kalal\nKumar Santnu</string>
    <string name="llogout">Logout</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="invalid_name">Please enter a valid username</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Please enter a valid or at least 6 character password</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="invalid_crime_description">Please enter some crime description</string>
    <string name="invalid_date">Please select crime date</string>
    <string name="invalid_time">Please select crime time</string>
    <string name="change_dp">Change Picture</string>
    <string name="remove_dp">Remove Picture</string>
    <string name="my_reported_crimes"><u>My Reported Crimes:</u></string>
    <string name="name_editProfile">Name:</string>
    <string name="name_email">Email:</string>
    <string name="name_password">New Password:</string>
    <string name="update_profile">Update</string>
    <string name="reported_on">Reported On:</string>
    <string name="feedback_app">Feedback</string>
    <string name="welcome_crime_mapping">Welcome to CRIME MAPPING!</string>
    <string name="pressss">Press and hold a Location on map to Add a crime.</string>
    <string name="report_incident">Add Crime/Incident</string>
    <string name="selectImage">Select Image</string>
    <string name="retry_upload">Retry</string>
    <string name="done_image">Done</string>
    <string name="l_crime">Newest Crime First</string>
    <string name="sort_by">Sort By</string>
    <string name="ol_crime">Oldest Crime First</string>
    <string name="crime_type_filter">Filter By (CRIME TYPE):</string>


</resources>
