<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:myapp="http://schemas.android.com/tools">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="10"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />


    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_autorenew_black_24dp"
        android:orderInCategory="20"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/report_incident"
        android:orderInCategory="25"
        android:title="@string/report_incident"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_app"
        android:orderInCategory="30"
        android:title="@string/about_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_us"
        android:orderInCategory="40"
        android:title="@string/about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/Feedback"
        android:orderInCategory="50"
        android:title="@string/feedback_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/Share"
        android:orderInCategory="60"
        android:title="@string/share"
        app:showAsAction="never" />


</menu>