<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_addcrimeactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"

    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/layout_addcrime_crimetype"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_crimetype"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:drawSelectorOnTop="true"
            android:prompt="@string/prompt_selecione_crime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/layout_addcrime_desciption"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/EditCrime"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/description_background"
            android:gravity="top|left"
            android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textWebEmailAddress|textWebPassword"
            android:maxLength="300"
            android:nextFocusDown="@+id/EditDateCrime"
            android:padding="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textCursorDrawable="@drawable/color_cursor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_date_range_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/layout_addcrime_date"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/EditDateCrime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:nextFocusDown="@+id/EditTimeCrime"
                    android:onClick="openDatePicker"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_alarm_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/layout_addcrime_time"
                    android:textColor="@color/black" />

                <EditText

                    android:id="@+id/EditTimeCrime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:onClick="openTimePicker"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/color_cursor" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
